[gd_scene format=3 uid="uid://bnnoct48gjtw6"]

[ext_resource type="Script" uid="uid://ddt5ufmvickc2" path="res://scenes/Main.gd" id="1_d7g3n"]
[ext_resource type="PackedScene" uid="uid://5javxi3uy0ep" path="res://scenes/Museum.tscn" id="1_ivvmh"]
[ext_resource type="Material" uid="uid://dy8pkb3g1hrd4" path="res://assets/textures/post_process_crt.tres" id="3_vde54"]
[ext_resource type="PackedScene" uid="uid://bw3fu2y38n3yk" path="res://scenes/menu/Settings.tscn" id="4_31ns1"]
[ext_resource type="PackedScene" uid="uid://3q5n8txx3jmm" path="res://scenes/menu/MainMenu.tscn" id="4_elltp"]
[ext_resource type="PackedScene" uid="uid://bhi1d8bl668hb" path="res://scenes/menu/PauseMenu.tscn" id="5_boks6"]
[ext_resource type="PackedScene" uid="uid://b575vo2u5rw0p" path="res://scenes/menu/PopupTerminalMenu.tscn" id="6_cjdwp"]
[ext_resource type="PackedScene" uid="uid://btdrwyul4s0cv" path="res://scenes/CacheCleaner.tscn" id="7_lsl8e"]
[ext_resource type="AudioStream" uid="uid://b1h0hsbf5yxji" path="res://assets/sound/UI/UI Game Launch Sting/Game Launch Sting.ogg" id="9_ketwq"]
[ext_resource type="PackedScene" uid="uid://bmp7qk2xnj5vy" path="res://scenes/menu/MultiplayerMenu.tscn" id="10_mpmenu"]
[ext_resource type="PackedScene" uid="uid://bj7vvqjer0u7e" path="res://scenes/menu/PlayerListOverlay.tscn" id="11_plyrovly"]
[ext_resource type="PackedScene" path="res://scenes/menu/RaceHUD.tscn" id="12_racehud"]
[ext_resource type="PackedScene" path="res://scenes/menu/VictoryScreen.tscn" id="13_victory"]
[ext_resource type="PackedScene" path="res://scenes/menu/ServerConsoleOverlay.tscn" id="14_srvcon"]
[ext_resource type="PackedScene" path="res://scenes/menu/ExhibitMapOverlay.tscn" id="15_mapovly"]

[node name="Main" type="Node" unique_id=557895252]
script = ExtResource("1_d7g3n")

[node name="Museum" parent="." unique_id=76677364 instance=ExtResource("1_ivvmh")]

[node name="CRTPostProcessing" type="CanvasLayer" parent="." unique_id=1109775851]
visible = false

[node name="ColorRect" type="ColorRect" parent="CRTPostProcessing" unique_id=2004303939]
material = ExtResource("3_vde54")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1160602503]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=1505598716]
z_index = -6
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65)

[node name="Settings" parent="CanvasLayer" unique_id=864804262 instance=ExtResource("4_31ns1")]
visible = false

[node name="MainMenu" parent="CanvasLayer" unique_id=260016124 instance=ExtResource("4_elltp")]
unique_name_in_owner = true

[node name="PauseMenu" parent="CanvasLayer" unique_id=1241102306 instance=ExtResource("5_boks6")]
visible = false

[node name="PopupTerminalMenu" parent="CanvasLayer" unique_id=2045565789 instance=ExtResource("6_cjdwp")]
visible = false

[node name="MultiplayerMenu" parent="CanvasLayer" unique_id=230795045 instance=ExtResource("10_mpmenu")]
visible = false

[node name="VictoryScreen" parent="CanvasLayer" unique_id=1583711091 instance=ExtResource("13_victory")]
visible = false

[node name="FpsLabel" type="Label" parent="." unique_id=857624085]
visible = false
z_index = 1
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(1, 1.0203)
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)

[node name="CacheCleaner" parent="." unique_id=1929376483 instance=ExtResource("7_lsl8e")]

[node name="GameLaunchSting" type="AudioStreamPlayer" parent="." unique_id=168555497]
stream = ExtResource("9_ketwq")
bus = &"Music"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1764230268]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 11.5449, 0)
visible = false
light_energy = 0.35
sky_mode = 1

[node name="TabMenu" type="CanvasLayer" parent="." unique_id=747814878]

[node name="PlayerListOverlay" parent="TabMenu" unique_id=355744873 instance=ExtResource("11_plyrovly")]
visible = false

[node name="RaceHUD" parent="TabMenu" unique_id=1376436483 instance=ExtResource("12_racehud")]

[node name="ServerConsoleOverlay" parent="TabMenu" instance=ExtResource("14_srvcon")]
visible = false

[node name="ExhibitMapOverlay" parent="TabMenu" instance=ExtResource("15_mapovly")]
visible = false

[connection signal="resume" from="CanvasLayer/Settings" to="." method="_on_settings_back"]
[connection signal="settings" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_settings"]
[connection signal="start" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_start_pressed"]
[connection signal="start_multiplayer" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_multiplayer"]
[connection signal="resume" from="CanvasLayer/PauseMenu" to="." method="_on_main_menu_start_pressed"]
[connection signal="return_to_lobby" from="CanvasLayer/PauseMenu" to="." method="_on_pause_menu_return_to_lobby"]
[connection signal="settings" from="CanvasLayer/PauseMenu" to="." method="_on_pause_menu_settings"]
[connection signal="resume" from="CanvasLayer/PopupTerminalMenu" to="." method="_on_main_menu_start_pressed"]
[connection signal="back" from="CanvasLayer/MultiplayerMenu" to="." method="_on_multiplayer_menu_back"]
[connection signal="start_game" from="CanvasLayer/MultiplayerMenu" to="." method="_on_multiplayer_start_game"]
